tests/reject/arithmetic.alg
sort Nat : Sort;
op a : → Nat;
eq foo a = a + a;
